--- a/Project 2/Project2.ipynb
+++ b/Project 2/Project2.ipynb
@@ -279,7 +279,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Explain the model underfitting and model overfitting here."
+        "The model does well when there is a small number of nodes. However, it overfits with a larger number of nodes (too complex) because it is so finely tuned to the training data that it cannot generalize itself to the test data."
       ],
       "metadata": {
         "id": "2_5NEhCBdXoH"
@@ -304,31 +304,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": 7,
-      "source": [
-        "# Codes for P2-3(a)\r\n",
-        "print('Print the number of documents in the training dataset and the test dataset. Print the number of attributes in the training dataset.')"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Print the number of documents in the training dataset and the test dataset. Print the number of attributes in the training dataset.\n"
-          ]
-        }
-      ],
-      "metadata": {
-        "id": "Sqsx5tNndiDU",
-        "outputId": "04b343b5-b8df-463a-cca9-2cbdd24d459c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      }
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**(b) Optimize the parameters of your decision tree to maximize the classification accuracy. Show the confusion matrix of your decision tree.**"
@@ -339,17 +314,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "source": [
-        "# Codes for P2-3(b)\r\n",
-        "print('Print your classification accuracy, confusion matrix.')"
+        "from os import pipe\r\n",
+        "import numpy as np\r\n",
+        "from sklearn import datasets, tree, model_selection, metrics, preprocessing, pipeline\r\n",
+        "from sklearn.feature_extraction.text import TfidfTransformer, TfidfVectorizer\r\n",
+        "from sklearn.pipeline import Pipeline, make_pipeline\r\n",
+        "from sklearn.naive_bayes import BernoulliNB\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "\r\n",
+        "# (a) load newsgroups\r\n",
+        "ng_train = datasets.fetch_20newsgroups(subset='train', categories=['rec.autos', 'talk.religion.misc', 'comp.graphics', 'sci.space'], remove=('headers', 'footers', 'quotes'))\r\n",
+        "ng_test = datasets.fetch_20newsgroups(subset='test', categories=['rec.autos', 'talk.religion.misc', 'comp.graphics', 'sci.space'], remove=('headers', 'footers', 'quotes'))\r\n",
+        "\r\n",
+        "print(f'''\r\n",
+        "Set\\t_|_ # Docs\\t_|_ Attributes''')\r\n",
+        "\r\n",
+        "# (b) decision tree\r\n",
+        "\r\n",
+        "max_depth_range = [None, 2, 5, 10]\r\n",
+        "min_samples_leaf_range = [1, 5, 10]\r\n",
+        "min_sample_split_range = [2, 10, 20]\r\n",
+        "min_leaf_nodes_range = [None, 5, 10, 20]\r\n",
+        "\r\n",
+        "param_grid = {\"clf__criterion\": ['gini'],\r\n",
+        "              \"clf__max_depth\": [10],\r\n",
+        "              \"clf__min_samples_leaf\": [1, 5, 10],\r\n",
+        "              \"clf__min_samples_split\": [20],\r\n",
+        "              \"clf__max_leaf_nodes\": [None, 5, 10, 20]\r\n",
+        "              }\r\n",
+        "\r\n",
+        "pipe_ = Pipeline([('vect', TfidfVectorizer()),\r\n",
+        "                      ('tfidf', TfidfTransformer()),\r\n",
+        "                      ('clf', tree.DecisionTreeClassifier())])\r\n",
+        "\r\n",
+        "#grid = model_selection.RandomizedSearchCV(estimator=pipe_, param_distributions=param_grid, scoring='accuracy', refit=True, verbose=True)\r\n",
+        "\r\n",
+        "# RandomizedSearchCV results.\r\n",
+        "# {*'clf__min_samples_split': 20, 'clf__min_samples_leaf': 1, 'clf__max_leaf_nodes': None, *'clf__max_depth': 10, 'clf__criterion': 'gini'}\r\n",
+        "\r\n",
+        "# Optimized results from adjusted param_grid and GridSearchCV.\r\n",
+        "# {'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': None, 'clf__min_samples_leaf': 5, 'clf__min_samples_split': 20}\r\n",
+        "\r\n",
+        "grid = model_selection.GridSearchCV(estimator=pipe_, param_grid=param_grid, scoring='accuracy', refit=True, verbose=True)\r\n",
+        "\r\n",
+        "vectorizer = TfidfVectorizer(sublinear_tf=True, max_df=0.5, stop_words='english',)\r\n",
+        "x_train = vectorizer.fit_transform(ng_train.data)\r\n",
+        "\r\n",
+        "print(f'''Train\\t |  {ng_train.target.shape[0]}\\t |  {x_train.shape[1]}\r\n",
+        "Test\\t |  {ng_test.target.shape[0]}\\t |  N/A''')\r\n",
+        "\r\n",
+        "grid.fit(ng_train.data, ng_train.target)\r\n",
+        "print(grid.best_params_)\r\n",
+        "y_pred = grid.best_estimator_.predict(ng_test.data)\r\n",
+        "print(metrics.confusion_matrix(ng_test.target, y_pred))\r\n",
+        "\r\n",
+        "#tree.plot_tree(grid.best_estimator_['clf'], filled=True, class_names=ng_test.target_names)\r\n",
+        "#plt.show()"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Print your classification accuracy, confusion matrix.\n"
+            "\n",
+            "Set\t_|_ # Docs\t_|_ Attributes\n",
+            "Train\t |  2148\t |  26562\n",
+            "Test\t |  1430\t |  N/A\n",
+            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': None, 'clf__min_samples_leaf': 10, 'clf__min_samples_split': 20}\n",
+            "[[192   1 196   0]\n",
+            " [ 18 164 214   0]\n",
+            " [  4   4 385   1]\n",
+            " [  6   8 185  52]]\n"
           ]
         }
       ],
@@ -365,7 +403,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Discuss how you optimize the parameters of your decision tree here."
+        "Running a Grid Search on such a large number of parameters was far too costly (720 candidates!). I chose to start with a Random Search to get an idea of which parameters worked well. Commented code shows the best parameters found via this method, using the lists above `param_grid`.\r\n",
+        "\r\n",
+        "With this in mind, I then reduced the Grid Search to two options per parameter. Further testing showed that some parameters did not change (marked with * in the comment) and some did. These \"changed\" parameters were then allowed all original options from the list and Grid Search was run. The optimized parameters were displayed - very close to what the Random Search found!"
       ],
       "metadata": {
         "id": "dalwVdZhd0Ey"
