--- a/Project 3/Project3.ipynb
+++ b/Project 3/Project3.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -51,7 +51,69 @@
         "id": "VGfsolCrbInO",
         "outputId": "6ad9aa14-3a19-4410-d01d-801cf0297e49"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Testing LinearSVC(dual=False, penalty='l1', tol=0.001)\n",
+            "Testing LinearSVC(dual=False, tol=0.001)\n",
+            "Testing MultinomialNB(alpha=0.001)\n",
+            "Testing MultinomialNB(alpha=0.01)\n",
+            "Testing MultinomialNB(alpha=0.1)\n",
+            "Testing KNeighborsClassifier()\n",
+            "Testing KNeighborsClassifier(n_neighbors=10)\n",
+            "Testing KNeighborsClassifier(n_neighbors=15)\n",
+            "Testing RandomForestClassifier(*)\n",
+            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+            "Testing AdaBoostClassifier(learning_rate=0.001)\n",
+            "Testing AdaBoostClassifier(learning_rate=0.01)\n",
+            "Testing AdaBoostClassifier(learning_rate=0.1)\n",
+            "Testing AdaBoostClassifier()\n",
+            "\n",
+            "Format = Hyperparameter : Accuracy\n",
+            "\n",
+            "Support Vector Machine\n",
+            "Hyperparameter: Penalty\n",
+            "l1  :  0.8251748251748252\n",
+            "l2  :  0.8748251748251749\n",
+            "\n",
+            "Naive Bayes\n",
+            "Hyperparameter: Smoothing (alpha)\n",
+            "0.001  :  0.8699300699300699\n",
+            "0.01  :  0.8748251748251749\n",
+            "0.1  :  0.8818181818181818\n",
+            "\n",
+            "K-nearest Neighbors\n",
+            "Hyperparameter: Number of Neighbors\n",
+            "5  :  0.28601398601398603\n",
+            "10  :  0.2748251748251748\n",
+            "15  :  0.26713286713286716\n",
+            "\n",
+            "Random Forest\n",
+            "Hyperparameter: Max Depth, Min Samples Leaf, Min Samples Split, Min Leaf Nodes\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': None, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 20}  :  0.7490724779096871\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': None, 'clf__min_samples_leaf': 5, 'clf__min_samples_split': 20}  :  0.7532650295440994\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': None, 'clf__min_samples_leaf': 10, 'clf__min_samples_split': 20}  :  0.7369664444083048\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 5, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 20}  :  0.6713167452702337\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 5, 'clf__min_samples_leaf': 5, 'clf__min_samples_split': 20}  :  0.6917970401691332\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 5, 'clf__min_samples_leaf': 10, 'clf__min_samples_split': 20}  :  0.6824936304006071\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 10, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 20}  :  0.727197918360709\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 10, 'clf__min_samples_leaf': 5, 'clf__min_samples_split': 20}  :  0.7323217867403914\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 10, 'clf__min_samples_leaf': 10, 'clf__min_samples_split': 20}  :  0.7323315444245677\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 20, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 20}  :  0.7388355830216295\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 20, 'clf__min_samples_leaf': 5, 'clf__min_samples_split': 20}  :  0.7430270504689109\n",
+            "{'clf__criterion': 'gini', 'clf__max_depth': 10, 'clf__max_leaf_nodes': 20, 'clf__min_samples_leaf': 10, 'clf__min_samples_split': 20}  :  0.7337095462676858\n",
+            "\n",
+            "AdaBoost Classifier\n",
+            "Hyperparameter: Learning Rate\n",
+            "0.001  :  0.4342657342657343\n",
+            "0.01  :  0.4783216783216783\n",
+            "0.1  :  0.6601398601398601\n",
+            "1.0  :  0.6573426573426573\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "from sklearn import datasets, model_selection, metrics\n",
@@ -174,7 +236,7 @@
         "id": "0NqsEu79cftE"
       },
       "source": [
-        "Discuss how you optimize the parameters of your decision tree here."
+        "SVM, Naive Bayes, and KNN were not too sensitive in regards to the chosen hyperparameters. The Random Forest preferred a higher maximum number of leaf nodes, but was around 73% for most runs. AdaBoost, while not very accurate, saw a significant boost when increasing the \"learning rate\" value towards one."
       ]
     },
     {
@@ -206,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -233,31 +295,31 @@
             "\n",
             "Multi-layer Perceptron\n",
             "Hyperparameter: Regularization (alpha)\n",
-            "0.0001  :  0.9577308120133482\n",
-            "0.001  :  0.9721913236929922\n",
-            "0.01  :  0.9610678531701891\n",
+            "0.0001  :  0.9710789766407119\n",
+            "0.001  :  0.9655172413793104\n",
+            "0.01  :  0.967741935483871\n",
             "0.1  :  0.9666295884315906\n",
             "\n",
             "Support Vector Machine\n",
             "Hyperparameter: Gamma\n",
-            "0.0001  :  0.9599555061179088\n",
-            "0.001  :  0.9877641824249166\n",
-            "0.01  :  0.5439377085650723\n",
-            "0.1  :  0.08342602892102335\n",
+            "0.0001  :  0.9655172413793104\n",
+            "0.001  :  0.9888765294771968\n",
+            "0.01  :  0.7063403781979978\n",
+            "0.1  :  0.08898776418242492\n",
             "\n",
-            "Using MLPClassifier(alpha=0.001) as best NN...\n",
+            "Using MLPClassifier() as best NN...\n",
             "\n",
             " -- Confusion Matrix of Neural Network --\n",
-            "[[88  0  0  0  0  0  0  0  0  0]\n",
-            " [ 0 94  0  0  0  0  0  0  1  0]\n",
-            " [ 1  1 86  0  0  0  0  0  0  0]\n",
-            " [ 0  0  0 88  0  0  0  1  2  0]\n",
-            " [ 0  0  0  0 93  2  0  2  0  2]\n",
-            " [ 0  0  0  0  1 95  1  0  0  0]\n",
-            " [ 0  1  0  0  0  0 86  0  0  0]\n",
-            " [ 0  0  0  1  1  0  0 84  0  1]\n",
-            " [ 0  2  0  0  0  1  2  0 70  0]\n",
-            " [ 0  1  0  0  0  1  0  0  0 90]]\n"
+            "[[88  0  0  0  1  0  0  0  0  0]\n",
+            " [ 1 77  1  1  0  0  0  0  0  0]\n",
+            " [ 0  0 97  0  0  0  0  0  0  0]\n",
+            " [ 0  0  0 83  0  3  0  0  0  0]\n",
+            " [ 1  1  0  0 91  0  0  0  1  0]\n",
+            " [ 0  1  0  0  0 99  0  0  0  0]\n",
+            " [ 0  0  0  0  2  0 92  0  0  0]\n",
+            " [ 0  0  0  0  2  0  0 85  0  0]\n",
+            " [ 0  5  0  0  0  2  0  0 75  0]\n",
+            " [ 0  0  0  0  0  0  0  3  1 86]]\n"
           ]
         }
       ],
@@ -384,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -439,10 +501,10 @@
       "provenance": []
     },
     "interpreter": {
-      "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      "hash": "baf91dbf765a80fd10386c25bac8886df1c659a2eae2e43da9a4443c39e1376e"
     },
     "kernelspec": {
-      "display_name": "Python 3.9.6 64-bit",
+      "display_name": "Python 3.9.2 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -455,7 +517,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.9.2"
     }
   },
   "nbformat": 4,
